force-app/main/default/objects/MUSW__License2__c/fields/abd_Active_Status__c.field-meta.xml
<CustomField>
    <fullName>abd_Active_Status__c</fullName>
    <formula>If(AND( abd_Effective_Date__c&lt;=Today(), abd_Effective_End_Date__c  >=Today()),true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Active Status</label>
    <type>Checkbox</type>
</CustomField>