force-app/main/default/objects/MUSW__License2__c/fields/abd_Addl_Loc_Address__c.field-meta.xml
<CustomField>
    <fullName>abd_Addl_Loc_Address__c</fullName>
    <label>Addl Location Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>