force-app/main/default/objects/MUSW__License2__c/fields/abd_Addl_Loc_App_Id__c.field-meta.xml
<CustomField>
    <fullName>abd_Addl_Loc_App_Id__c</fullName>
    <label>Addl Loc App Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>