force-app/main/default/objects/MUSW__License2__c/fields/abd_Application_ID__c.field-meta.xml
<CustomField>
    <fullName>abd_Application_ID__c</fullName>
    <description>Used to temporarily store the parent license's application id so that Automatic (included) licenses can be added to the application.  Used by the DRE</description>
    <label>Application ID</label>
    <length>25</length>
    <type>Text</type>
</CustomField>