force-app/main/default/objects/MUSW__License2__c/fields/abd_Approved_Date__c.field-meta.xml
<CustomField>
    <fullName>abd_Approved_Date__c</fullName>
    <label>Approved Date</label>
    <type>Date</type>
</CustomField>