force-app/main/default/objects/MUSW__License2__c/fields/abd_AutoGenerated__c.field-meta.xml
<CustomField>
    <fullName>abd_AutoGenerated__c</fullName>
    <label>AutoGenerated</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>Yes - linked to Application</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>