force-app/main/default/objects/MUSW__License2__c/fields/abd_Bathroom_Waiver_Expiration__c.field-meta.xml
<CustomField>
    <fullName>abd_Bathroom_Waiver_Expiration__c</fullName>
    <label>Bathroom Waiver Expiration</label>
    <type>Date</type>
</CustomField>