force-app/main/default/objects/MUSW__License2__c/fields/abd_Bond_Cancel_Date__c.field-meta.xml
<CustomField>
    <fullName>abd_Bond_Cancel_Date__c</fullName>
    <label>Bond Cancel Date</label>
    <type>Date</type>
</CustomField>