force-app/main/default/objects/MUSW__License2__c/fields/ABD_Bond_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>ABD_Bond_Expiration_Date__c</fullName>
    <label>Bond Expiration Date</label>
    <type>Date</type>
</CustomField>