force-app/main/default/objects/MUSW__License2__c/fields/abd_Business_Name__c.field-meta.xml
<CustomField>
    <fullName>abd_Business_Name__c</fullName>
    <inlineHelpText>This is the help text for the Business Name</inlineHelpText>
    <label>Business Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>