force-app/main/default/objects/MUSW__License2__c/fields/abd_Business_Type__c.field-meta.xml
<CustomField>
    <fullName>abd_Business_Type__c</fullName>
    <label>Business Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sole Proprietorship</fullName>
            </value>
            <value>
                <fullName>Publicly Traded Corporation</fullName>
            </value>
            <value>
                <fullName>General Partnership</fullName>
            </value>
            <value>
                <fullName>Limited Partnership</fullName>
            </value>
            <value>
                <fullName>Privately-Held Corporation</fullName>
            </value>
            <value>
                <fullName>Non-profit</fullName>
            </value>
            <value>
                <fullName>Limited Liability Company</fullName>
            </value>
            <value>
                <fullName>Municipality General Partnership</fullName>
            </value>
            <value>
                <fullName>Municipality</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>