force-app/main/default/objects/MUSW__License2__c/fields/abd_City_Population__c.field-meta.xml
<CustomField>
    <fullName>abd_City_Population__c</fullName>
    <label>City Population</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>