force-app/main/default/objects/MUSW__License2__c/fields/abd_Current_Application__c.field-meta.xml
<CustomField>
    <fullName>abd_Current_Application__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Current Application</label>
    <type>Checkbox</type>
</CustomField>