force-app/main/default/objects/MUSW__License2__c/fields/abd_Date_of_Auction_Beginning__c.field-meta.xml
<CustomField>
    <fullName>abd_Date_of_Auction_Beginning__c</fullName>
    <label>Date of Auction - Beginning</label>
    <type>Date</type>
</CustomField>