force-app/main/default/objects/MUSW__License2__c/fields/abd_DBA__c.field-meta.xml
<CustomField>
    <fullName>abd_DBA__c</fullName>
    <label>DBA</label>
    <length>100</length>
    <type>Text</type>
</CustomField>