force-app/main/default/objects/MUSW__License2__c/fields/abd_DRAM_Policy_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>abd_DRAM_Policy_Expiration_Date__c</fullName>
    <label>DRAM Policy Expiration Date</label>
    <type>Date</type>
</CustomField>