force-app/main/default/objects/MUSW__License2__c/fields/abd_DRAM_Policy_Number__c.field-meta.xml
<CustomField>
    <fullName>abd_DRAM_Policy_Number__c</fullName>
    <label>Policy Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>