force-app/main/default/objects/MUSW__License2__c/fields/abd_DRAM_Shop__c.field-meta.xml
<CustomField>
    <fullName>abd_DRAM_Shop__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dramshop Liability Insurance Carrier</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.Type</field>
            <operation>equals</operation>
            <value>DRAM shop</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Licenses (DRAM Shop)</relationshipLabel>
    <relationshipName>Licenses</relationshipName>
    <type>Lookup</type>
</CustomField>