force-app/main/default/objects/MUSW__License2__c/fields/abd_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>abd_Effective_Date__c</fullName>
    <label>License Start Date</label>
    <type>Date</type>
</CustomField>