force-app/main/default/objects/MUSW__License2__c/fields/abd_Last_Tax_Report__c.field-meta.xml
<CustomField>
    <fullName>abd_Last_Tax_Report__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Last Tax Report</label>
    <referenceTo>BGBK__Return__c</referenceTo>
    <relationshipLabel>Licenses</relationshipLabel>
    <relationshipName>Licenses</relationshipName>
    <type>Lookup</type>
</CustomField>