force-app/main/default/objects/MUSW__License2__c/fields/abd_Latest_Fee__c.field-meta.xml
<CustomField>
    <fullName>abd_Latest_Fee__c</fullName>
    <label>Latest Fee</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>