force-app/main/default/objects/MUSW__License2__c/fields/abd_Length__c.field-meta.xml
<CustomField>
    <fullName>abd_Length__c</fullName>
    <label>Length</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Length</valueSetName>
    </valueSet>
</CustomField>