force-app/main/default/objects/MUSW__License2__c/fields/abd_License_Approved__c.field-meta.xml
<CustomField>
    <fullName>abd_License_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>License Approved</label>
    <type>Checkbox</type>
</CustomField>