force-app/main/default/objects/MUSW__License2__c/fields/abd_License_Attached__c.field-meta.xml
<CustomField>
    <fullName>abd_License_Attached__c</fullName>
    <defaultValue>false</defaultValue>
    <label>License Attached</label>
    <type>Checkbox</type>
</CustomField>