force-app/main/default/objects/MUSW__License2__c/fields/abd_License_City__c.field-meta.xml
<CustomField>
    <fullName>abd_License_City__c</fullName>
    <formula>MUSW__Applicant__r.Account.BillingCity</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>License City</label>
    <type>Text</type>
</CustomField>