force-app/main/default/objects/MUSW__License2__c/fields/abd_License_Document_Text__c.field-meta.xml
<CustomField>
    <fullName>abd_License_Document_Text__c</fullName>
    <formula>IF( 
BEGINS( TEXT( abd_AutoGenerated__c ),"Yes"), 
TEXT( MUSW__Class__c )&amp; " - " &amp; TEXT( abd_Length__c ) &amp; " [INCLUDED]",
IF(
BEGINS( TEXT( abd_License_Type__c ),"P-"), 
TEXT( MUSW__Class__c )&amp; " - " &amp; TEXT( abd_Length__c ), 
TEXT( MUSW__Class__c )&amp; " - " &amp; TEXT( abd_Length__c ) &amp; " [" &amp; Name &amp; "]"))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>License Document Text</label>
    <type>Text</type>
</CustomField>