force-app/main/default/objects/MUSW__License2__c/fields/abd_LicenseType__c.field-meta.xml
<CustomField>
    <fullName>abd_LicenseType__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>License Typel</label>
    <referenceTo>abd_License_Types__c</referenceTo>
    <relationshipLabel>Licenses</relationshipLabel>
    <relationshipName>Licenses</relationshipName>
    <type>Lookup</type>
</CustomField>