force-app/main/default/objects/MUSW__License2__c/fields/abd_Name_of_River_Lake__c.field-meta.xml
<CustomField>
    <fullName>abd_Name_of_River_Lake__c</fullName>
    <label>Name of River/Lake</label>
    <length>255</length>
    <type>Text</type>
</CustomField>