force-app/main/default/objects/MUSW__License2__c/fields/abd_Premise_Address_2__c.field-meta.xml
<CustomField>
    <fullName>abd_Premise_Address_2__c</fullName>
    <label>Premises Address 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>