force-app/main/default/objects/MUSW__License2__c/fields/abd_Premise_Address__c.field-meta.xml
<CustomField>
    <fullName>abd_Premise_Address__c</fullName>
    <label>Premises Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>