force-app/main/default/objects/MUSW__License2__c/fields/abd_Premise_City__c.field-meta.xml
<CustomField>
    <fullName>abd_Premise_City__c</fullName>
    <label>Premises City</label>
    <length>100</length>
    <type>Text</type>
</CustomField>