force-app/main/default/objects/MUSW__License2__c/fields/abd_Premise_From__c.field-meta.xml
<CustomField>
    <fullName>abd_Premise_From__c</fullName>
    <label>From</label>
    <type>Date</type>
</CustomField>