force-app/main/default/objects/MUSW__License2__c/fields/abd_Premise_To__c.field-meta.xml
<CustomField>
    <fullName>abd_Premise_To__c</fullName>
    <label>To</label>
    <type>Date</type>
</CustomField>