force-app/main/default/objects/MUSW__License2__c/fields/abd_Premise_Zip__c.field-meta.xml
<CustomField>
    <fullName>abd_Premise_Zip__c</fullName>
    <label>Premises Zip</label>
    <length>5</length>
    <type>Text</type>
</CustomField>