force-app/main/default/objects/MUSW__License2__c/fields/abd_Premises_Type__c.field-meta.xml
<CustomField>
    <fullName>abd_Premises_Type__c</fullName>
    <label>Premises Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>abd_Premises_Type</valueSetName>
    </valueSet>
</CustomField>