force-app/main/default/objects/MUSW__License2__c/fields/abd_Primary_Contact__c.field-meta.xml
<CustomField>
    <fullName>abd_Primary_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Licenses (Primary Contact)</relationshipLabel>
    <relationshipName>Licenses</relationshipName>
    <type>Lookup</type>
</CustomField>