force-app/main/default/objects/MUSW__License2__c/fields/abd_Renewal_App__c.field-meta.xml
<CustomField>
    <fullName>abd_Renewal_App__c</fullName>
    <label>Renewal App</label>
    <length>18</length>
    <type>Text</type>
</CustomField>