force-app/main/default/objects/MUSW__License2__c/fields/abd_Renewal_Status__c.field-meta.xml
<CustomField>
    <fullName>abd_Renewal_Status__c</fullName>
    <label>Renewal Status</label>
    <length>30</length>
    <type>Text</type>
</CustomField>