force-app/main/default/objects/MUSW__License2__c/fields/abd_Square_Footage_Retail_Area__c.field-meta.xml
<CustomField>
    <fullName>abd_Square_Footage_Retail_Area__c</fullName>
    <label>Square Footage Retail Area</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>