force-app/main/default/objects/MUSW__License2__c/fields/abd_Temporary_or_Permanent__c.field-meta.xml
<CustomField>
    <fullName>abd_Temporary_or_Permanent__c</fullName>
    <label>Temporary or Permanent</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Temporary</fullName>
            </value>
            <value>
                <fullName>Permanent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>