force-app/main/default/objects/MUSW__License2__c/fields/abd_Time_of_Auction_Ending__c.field-meta.xml
<CustomField>
    <fullName>abd_Time_of_Auction_Ending__c</fullName>
    <label>Time of Auction - Ending</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>abd_Time</valueSetName>
    </valueSet>
</CustomField>