force-app/main/default/objects/MUSW__License2__c/fields/abd_Transfer_App__c.field-meta.xml
<CustomField>
    <fullName>abd_Transfer_App__c</fullName>
    <label>Transfer App</label>
    <length>20</length>
    <type>Text</type>
</CustomField>