force-app/main/default/objects/MUSW__License2__c/fields/abd_Veterans_Organization__c.field-meta.xml
<CustomField>
    <fullName>abd_Veterans_Organization__c</fullName>
    <label>Veterans Organization</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>abd_Yes_No</valueSetName>
    </valueSet>
</CustomField>