force-app/main/default/objects/MUSW__License2__c/fields/Addl_Loc_State__c.field-meta.xml
<CustomField>
    <fullName>Addl_Loc_State__c</fullName>
    <label>Addl Location State</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>State</valueSetName>
    </valueSet>
</CustomField>