force-app/main/default/objects/MUSW__License2__c/fields/Bond_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Bond_Effective_Date__c</fullName>
    <label>Bond Effective Date</label>
    <type>Date</type>
</CustomField>