force-app/main/default/objects/MUSW__License2__c/fields/License_Makes_Owner_Ineligible__c.field-meta.xml
<CustomField>
    <fullName>License_Makes_Owner_Ineligible__c</fullName>
    <description>If this flag is on, any owner associated with this license is ineligible from applying for a 6 or 8 month license.</description>
    <formula>IF (OR (ISPICKVAL( abd_Length__c ,'6 months'),ISPICKVAL( abd_Length__c ,'8 months')),
	IF (
		OR (
			ISNULL(abd_Effective_End_Date__c),
			BLANKVALUE(abd_Effective_End_Date__c,TODAY()) >= TODAY()
		),
		FALSE,
		AND (
			OR (
				ISPICKVAL( abd_Length__c ,'6 months'),
				ISPICKVAL( abd_Length__c ,'8 months')
			),
			IF(
				MONTH(TODAY()) >= MONTH(abd_Effective_End_Date__c),
		 		OR (
		 			MONTH(TODAY()) - MONTH(abd_Effective_End_Date__c) &lt; 2,
		 			AND (
		 				MONTH(TODAY()) - MONTH(abd_Effective_End_Date__c) = 2, 
		 				(DAY(TODAY()) &lt;= DAY(abd_Effective_End_Date__c))
			 			)
		 		),
				OR (
			 		(12 + MONTH(TODAY())) - MONTH(abd_Effective_End_Date__c) &lt; 2,
			 		AND (
			 			(12 + MONTH(TODAY())) - MONTH(abd_Effective_End_Date__c) = 2, 
		 				(DAY(TODAY()) &lt;= DAY(abd_Effective_End_Date__c))
			 		)
			 	)
			)
		)
	),
FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>License Makes Owner Ineligible</label>
    <type>Checkbox</type>
</CustomField>