force-app/main/default/objects/MUSW__License2__c/fields/MUSW__Alert_Indicator__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Alert_Indicator__c</fullName>
    <formula>HYPERLINK("/apex/musw__TaskAlert?id="+ Id, IMAGE(
CASE( MUSW__AlertCode__c,
0, "/img/samples/light_green.gif",
1, "/img/samples/light_yellow.gif",
2, "/img/samples/light_red.gif",
"https://letterbatch.mybasicgov.com/img/light_off.gif"),
"none"), "_top") + IF(MUSW__Parcel__c != null, " Par: " + HYPERLINK("/apex/musw__TaskAlert?id="+ MUSW__Parcel__c, IMAGE(
CASE( MUSW__Parcel__r.MUSW__AlertCode__c,
0, "/img/samples/light_green.gif",
1, "/img/samples/light_yellow.gif",
2, "/img/samples/light_red.gif",
"https://letterbatch.mybasicgov.com/img/light_off.gif"),
"none"), "_top"),"")</formula>
    <label>Alert</label>
    <type>Text</type>
</CustomField>