force-app/main/default/objects/MUSW__License2__c/fields/MUSW__Applicant__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Applicant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Person applying for License on behalf of Licensee</inlineHelpText>
    <label>Applicant</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>License2s</relationshipName>
    <type>Lookup</type>
</CustomField>