force-app/main/default/objects/MUSW__License2__c/fields/MUSW__Issue_Date__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Issue_Date__c</fullName>
    <label>Issue Date</label>
    <type>Date</type>
</CustomField>