force-app/main/default/objects/MUSW__License2__c/fields/MUSW__Primary_Licensee__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Primary_Licensee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>This is the help text for the Primary Licensee</inlineHelpText>
    <label>Licensee</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>License2s</relationshipName>
    <type>Lookup</type>
</CustomField>