force-app/main/default/objects/MUSW__License2__c/fields/MUSW__Project2__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Project2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project</label>
    <referenceTo>MUSW__Project2__c</referenceTo>
    <relationshipLabel>Licenses</relationshipLabel>
    <relationshipName>License2s</relationshipName>
    <type>Lookup</type>
</CustomField>