force-app/main/default/objects/MUSW__License2__c/fields/Subtype__c.field-meta.xml
<CustomField>
    <fullName>Subtype__c</fullName>
    <label>Subtype</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Single Family Home</fullName>
            </value>
            <value>
                <fullName>Multi Family Dwelling</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>