force-app/main/default/objects/MUSW__License2__c/fields/TEST_Run_Tax_Report__c.field-meta.xml
<CustomField>
    <fullName>TEST_Run_Tax_Report__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TEST - Run Tax Report</label>
    <type>Checkbox</type>
</CustomField>